<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_title"
        android:key="general"
        >
        <CheckBoxPreference
            android:title="@string/settings_workaround"
            android:key="workaround"
            android:enabled="false"

            android:summary="@string/settings_workaround_summary"
            />
        <EditTextPreference
            android:title="@string/settings_presence_interval"
            android:key="presence_interval"

            android:summary="@string/settings_presence_interval_summary"
            android:dialogMessage="@string/settings_presence_interval_dialog"
            android:inputType="number"
            android:maxLength="5"
            android:defaultValue="750"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_network"
        android:key="network"
        >
        <EditTextPreference
            android:title="@string/settings_hostname"
            android:key="host"

            android:summary="@string/settings_hostname_summary"
            android:dialogMessage="@string/settings_hostname_dialog"
            />
        <EditTextPreference
            android:title="@string/settings_port"
            android:key="port"

            android:summary="@string/settings_port_summary"
            android:dialogMessage="@string/settings_port_dialog"
            android:inputType="number"
            android:maxLength="5"
            android:defaultValue="5566"
            />
        <CheckBoxPreference
            android:title="@string/settings_tls"
            android:key="tls"

            android:summary="@string/settings_tls_summary"
            android:defaultValue="false"
            />
        <Preference
            android:title="@string/settings_reset_usertrust"
            android:key="reset_usertrust"
            android:summary="@string/settings_reset_usertrust_summary"
            />
        <EditTextPreference
            android:title="@string/settings_session"
            android:key="session"

            android:summary="@string/settings_session_summary"
            android:dialogMessage="@string/settings_session_dialog"
            android:inputType="number"
            android:maxLength="2"
            android:defaultValue="1"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_authentication"
        android:key="authentication"
        >
        <CheckBoxPreference
            android:title="@string/settings_enable_authentication"
            android:key="pref_enable_authentication"
            android:summary="@string/settings_enable_authentication_summary"
            android:defaultValue="false"
            />
        <EditTextPreference
            android:title="@string/settings_auth_secret"
            android:key="pref_auth_secret"
            android:summary="@string/settings_auth_secret_summary"
            android:dialogMessage="@string/settings_auth_secret_dialog"
            android:dependency="pref_enable_authentication"
            android:inputType="textPassword"
            />
        <EditTextPreference
            android:title="@string/settings_auth_client_id"
            android:key="pref_auth_client_id"
            android:summary="@string/settings_auth_client_id_summary"
            android:dialogMessage="@string/settings_auth_client_id_dialog"
            android:dependency="pref_enable_authentication"
            android:defaultValue=""
            />
        <Preference
            android:key="pref_auth_info"
            android:summary="@string/settings_auth_info"
            android:selectable="false"
            android:dependency="pref_enable_authentication"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_replay"
        android:key="replay"
        >
        <CheckBoxPreference
            android:title="@string/settings_adv_replay"
            android:key="network"

            android:summary="@string/settings_adv_replay_summary"
            />
        <ListPreference
            android:title="@string/settings_replay_mode"
            android:key="mode"

            android:summary="@string/settings_replay_mode_summary"
            android:entries="@array/replay_mode_names"
            android:entryValues="@array/replay_mode_values"
            android:defaultValue="index"
            />
    </PreferenceCategory>
</PreferenceScreen>
